<resources>
    <string name="app_name">Food Express</string>
    <string name="todo">Todo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="phone_template">+998</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="repassword">Repassword</string>
    <string name="password">Password</string>
    <string name="main">Main</string>
    <string name="map">Map</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="view_all">View all</string>
    <string name="nearby_restaurants">Nearby restaurants</string>
    <string name="top_restaurants">Top restaurants</string>
    <string name="restaurant_detail">Restaurant Detail</string>
    <string name="address">Address</string>
    <string name="open_the_map"><u>Open the map</u></string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="contact">Contact</string>
    <string name="foods">Foods</string>
    <string name="order">Order</string>
    <string name="click_order">Click order to go to the shopping cart</string>
    <string name="reviews">reviews</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="your_feedback">Your feedback</string>
    <string name="feedback">Feedback</string>
    <string name="write_a_review">Write a review</string>
    <string name="put_a_rating">Put a rating</string>
    <string name="card_of_food_orders">Card of food orders</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="the_cart_is_empty">Savat bo\'sh. Iltimos restoranga kirib o\'zingizga kerakli mahsulotlarni savatga qo\'shing</string>
    <string name="choose_the_application_method">Choose the application method</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="old_password">Old password</string>
    <string name="confirm_with_an_sms_code">Confirm with an SMS code</string>
    <string name="reply">Reply</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New password</string>
    <string name="you_have_changed_your_password">You have changed your password</string>
    <string name="ok">OK</string>
</resources>